--- a/index.html
+++ b/index.html
@@ -205,56 +205,56 @@ body {
 <div class="menu-category" id="pizza">
 <h2 onclick="toggleMenu('pizza-items')">🍕 Pizza</h2>
 <div class="menu-items" id="pizza-items">
-<div class="menu-item"><img src="img.jpg"><h3>Pepperoni</h3><span class="price">$40</span></div>
+<div class="menu-item"><img src="image/image1.png"><h3>Pepperoni</h3><span class="price">40ETB</span></div>
 </div>
 </div>
 
 <div class="menu-category" id="salad">
 <h2 onclick="toggleMenu('salad-items')">🥗 Salads</h2>
 <div class="menu-items" id="salad-items">
-<div class="menu-item"><img src="img.jpg"><h3>Greek Salad</h3><span class="price">$20</span></div>
+<div class="menu-item"><img src="image/image1.png"><h3>Greek Salad</h3><span class="price">20ETB</span></div>
 </div>
 </div>
 
 <div class="menu-category" id="burger">
 <h2 onclick="toggleMenu('burger-items')">🍔 Burgers</h2>
 <div class="menu-items" id="burger-items">
-<div class="menu-item"><img src="img.jpg"><h3>Beef Burger</h3><span class="price">$30</span></div>
+<div class="menu-item"><img src="image/image2.png"><h3>Beef Burger</h3><span class="price">30ETB</span></div>
 </div>
 </div>
 
 <div class="menu-category" id="pasta">
 <h2 onclick="toggleMenu('pasta-items')">🍝 Pasta</h2>
 <div class="menu-items" id="pasta-items">
-<div class="menu-item"><img src="img.jpg"><h3>Carbonara</h3><span class="price">$35</span></div>
+<div class="menu-item"><img src="image/image1.png"><h3>Carbonara</h3><span class="price">35ETB</span></div>
 </div>
 </div>
 
 <div class="menu-category" id="hot">
 <h2 onclick="toggleMenu('hot-items')">☕ Hot Drinks</h2>
 <div class="menu-items" id="hot-items">
-<div class="menu-item"><img src="img.jpg"><h3>Cappuccino</h3><span class="price">$8</span></div>
+<div class="menu-item"><img src="image/image2.png"><h3>Cappuccino</h3><span class="price">8ETB</span></div>
 </div>
 </div>
 
 <div class="menu-category" id="cold">
 <h2 onclick="toggleMenu('cold-items')">🧊 Cold Drinks</h2>
 <div class="menu-items" id="cold-items">
-<div class="menu-item"><img src="img.jpg"><h3>Iced Coffee</h3><span class="price">$7</span></div>
+<div class="menu-item"><img src="image/image1.png"><h3>Iced Coffee</h3><span class="price">7ETB</span></div>
 </div>
 </div>
 
 <div class="menu-category" id="juice">
 <h2 onclick="toggleMenu('juice-items')">🧃 Juices</h2>
 <div class="menu-items" id="juice-items">
-<div class="menu-item"><img src="img.jpg"><h3>Mango Juice</h3><span class="price">$6</span></div>
+<div class="menu-item"><img src="image/image2.png"><h3>Mango Juice</h3><span class="price">6ETB</span></div>
 </div>
 </div>
 
 <div class="menu-category" id="dessert">
 <h2 onclick="toggleMenu('dessert-items')">🍰 Desserts</h2>
 <div class="menu-items" id="dessert-items">
-<div class="menu-item"><img src="img.jpg"><h3>Chocolate Cake</h3><span class="price">$7</span></div>
+<div class="menu-item"><img src="image/image1.png"><h3>Chocolate Cake</h3><span class="price">7ETB</span></div>
 </div>
 </div>
 
@@ -304,4 +304,3 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
-
