--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cafe Menu</title>
+<title>Blue Mark</title>
 
 <style>
 body {
@@ -171,8 +171,8 @@ body {
 <div class="container">
 
 <div class="header">
-    <img src="logo_url.jpg">
-    <h1>Cafe Brand</h1>
+    <img src="image/logo.png">
+    <h1>Blue Mark</h1>
 
     <div class="header-row">
         <button class="menu-btn" id="menu-btn" onclick="toggleDropdown()">☰</button>
@@ -304,3 +304,4 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
