--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 }
 
 .header img {
-    width: 90px;
+    width: auto;
 }
 
 .header h1 {
@@ -304,4 +304,5 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
