--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ body {
 }
 
 .header img {
-    width: auto;
+    width: 100px;
+    height: 100px;
 }
 
 .header h1 {
@@ -304,5 +305,6 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
