--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ body {
 }
 
 .header img {
-    width: 100px;
-    height: 200px;
+    width: auto;
+    height: 100px;
 }
 
 .header h1 {
@@ -305,6 +305,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
