--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ body {
 
 <div class="header">
     <img src="image/logo.png">
-    <h1>Blue Mark</h1>
+    <!--<h1>Blue Mark</h1>-->
 
     <div class="header-row">
         <button class="menu-btn" id="menu-btn" onclick="toggleDropdown()">☰</button>
@@ -305,6 +305,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
