--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <style>
 body {
     font-family: Arial, sans-serif;
+    background-image: url("image/bg.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     background: #E8F5E9;
     margin: 0;
     padding: 15px;
@@ -305,6 +309,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
