--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background: #E8F5E9;
+    /*background: #E8F5E9;*/
     margin: 0;
     padding: 15px;
 }
@@ -309,6 +309,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
