--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 .container {
     max-width: 400px;
     margin: auto;
-    /*background: #ffffff;*/
+    background: #ffffff;
     border-radius: 15px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     padding: 20px;
@@ -309,6 +309,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
