--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@ body {
 .container {
     max-width: 400px;
     margin: auto;
-    background: #ffffff;
+    background-image: url("image/bg .png");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    /*background: #ffffff;*/
     border-radius: 15px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     padding: 20px;
@@ -309,6 +313,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
