--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    /*background: #ffffff;*/
+    background: #ffffff;
     border-radius: 15px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     padding: 20px;
@@ -313,6 +313,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
