--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body {
 
 /* ITEM */
 .menu-item {
-   /* background: #F1F8E9;*/
+    background: #F1F8E9;
     border-radius: 10px;
     padding: 12px;
     margin-top: 10px;
@@ -313,6 +313,7 @@ window.addEventListener('resize', checkTabsOverflow);
 
 </body>
 </html>
+
 
 
 
